[Hotkey] Renamed string
Renamed "Instant record" to "Instant recording" to be consistent with the help menu on the "InfoBarGenerics" screen and removed the "..." from the latter.
All translations updated as necessary.

--- a/po/ar.po
+++ b/po/ar.po
@@ -4920,8 +4920,8 @@ msgstr "تسجيل سريع"
 msgid "Instant recording location"
 msgstr "مكان التسجيلات السريعة"
 
-msgid "Instant recording..."
-msgstr "جاري التسجيل السريع..."
+msgid "Instant recording"
+msgstr "جاري التسجيل السريع"
 
 msgid "Interface: "
 msgstr "واجهه: "
