--- a/po/bg.po
+++ b/po/bg.po
@@ -4577,8 +4577,8 @@ msgstr "Незабавен запис"
 msgid "Instant recording location"
 msgstr "Място за незабавен запис"
 
-msgid "Instant recording..."
-msgstr "Незабавен запис..."
+msgid "Instant recording"
+msgstr "Незабавен запис"
 
 msgid "Interface: "
 msgstr "Интерфейс: "
