--- a/po/cs.po
+++ b/po/cs.po
@@ -5232,8 +5232,8 @@ msgid "Instant recording location"
 msgstr "Okamžité nahrávání"
 
 #
-msgid "Instant recording..."
-msgstr "Okamžité nahrávání..."
+msgid "Instant recording"
+msgstr "Okamžité nahrávání"
 
 #
 msgid "Interface: "
