--- a/po/da.po
+++ b/po/da.po
@@ -5196,8 +5196,8 @@ msgid "Instant recording location"
 msgstr "Umiddelbar optagelses placering"
 
 #
-msgid "Instant recording..."
-msgstr "Hurtig optagelse..."
+msgid "Instant recording"
+msgstr "Hurtig optagelse"
 
 #
 msgid "Interface: "
