--- a/po/de.po
+++ b/po/de.po
@@ -4577,8 +4577,8 @@ msgstr "Sofortaufnahme"
 msgid "Instant recording location"
 msgstr "Sofortaufnahme-Verzeichnis"
 
-msgid "Instant recording..."
-msgstr "Sofortaufnahme…"
+msgid "Instant recording"
+msgstr "Sofortaufnahme"
 
 msgid "Interface: "
 msgstr "Interface: "
