--- a/po/el.po
+++ b/po/el.po
@@ -4562,8 +4562,8 @@ msgstr "Άμεση εγγραφή"
 msgid "Instant recording location"
 msgstr "Τοποθεσία άμεσης εγγραφής"
 
-msgid "Instant recording..."
-msgstr "Άμεση εγγραφή..."
+msgid "Instant recording"
+msgstr "Άμεση εγγραφή"
 
 msgid "Interface: "
 msgstr "Διεπαφή: "
