--- a/po/es.po
+++ b/po/es.po
@@ -5076,8 +5076,8 @@ msgid "Instant recording location"
 msgstr "Ubicación de grabación instantánea"
 
 #
-msgid "Instant recording..."
-msgstr "Grabación instantánea …"
+msgid "Instant recording"
+msgstr "Grabación instantánea"
 
 #
 msgid "Interface: "
