--- a/po/et.po
+++ b/po/et.po
@@ -4612,8 +4612,8 @@ msgstr "Kohene salvestus"
 msgid "Instant recording location"
 msgstr "Kohese salvestuse asukoht"
 
-msgid "Instant recording..."
-msgstr "Kohene salvestamine..."
+msgid "Instant recording"
+msgstr "Kohene salvestamine"
 
 msgid "Interface: "
 msgstr "Liides: "
