--- a/po/fa.po
+++ b/po/fa.po
@@ -4700,7 +4700,7 @@ msgid "Instant recording location"
 msgstr "مکان ضبط کردن فوری"
 
 #, fuzzy
-msgid "Instant recording..."
+msgid "Instant recording"
 msgstr "مکان ضبط کردن فوری"
 
 msgid "Interface: "
