--- a/po/fi.po
+++ b/po/fi.po
@@ -5072,8 +5072,8 @@ msgstr "Pikatallennus..."
 msgid "Instant recording location"
 msgstr "Pikatallennuksen hakemisto"
 
-msgid "Instant recording..."
-msgstr "Pikatallennus..."
+msgid "Instant recording"
+msgstr "Pikatallennus"
 
 msgid "Interface: "
 msgstr "Liittymä: "
