--- a/po/fr.po
+++ b/po/fr.po
@@ -4569,8 +4569,8 @@ msgstr "Enregistrement immédiat"
 msgid "Instant recording location"
 msgstr "Emplacement des enregistrements immédiats"
 
-msgid "Instant recording..."
-msgstr "Enregistrement Immédiat..."
+msgid "Instant recording"
+msgstr "Enregistrement Immédiat"
 
 msgid "Interface: "
 msgstr "Interface: "
