--- a/po/fy.po
+++ b/po/fy.po
@@ -5233,8 +5233,8 @@ msgstr "feroarje opnim tiiden"
 
 #
 #, fuzzy
-msgid "Instant recording..."
-msgstr "In direct opnimmen..."
+msgid "Instant recording"
+msgstr "In direct opnimmen"
 
 #
 msgid "Interface: "
