--- a/po/he.po
+++ b/po/he.po
@@ -4918,8 +4918,8 @@ msgid "Instant recording location"
 msgstr "מיקום הקלטה מיידית"
 
 #, fuzzy
-msgid "Instant recording..."
-msgstr "...הקלטה מיידית"
+msgid "Instant recording"
+msgstr "הקלטה מיידית"
 
 msgid "Interface: "
 msgstr ":ממשק"
