--- a/po/hr.po
+++ b/po/hr.po
@@ -4587,8 +4587,8 @@ msgstr "Trenutni zapis"
 msgid "Instant recording location"
 msgstr "Lokacija mjesta snimanja"
 
-msgid "Instant recording..."
-msgstr "Mjesto snimanja..."
+msgid "Instant recording"
+msgstr "Mjesto snimanja"
 
 msgid "Interface: "
 msgstr "Sučelje: "
