--- a/po/hu.po
+++ b/po/hu.po
@@ -4571,8 +4571,8 @@ msgstr "Azonnali felvétel"
 msgid "Instant recording location"
 msgstr "Azonnali felvételek helye"
 
-msgid "Instant recording..."
-msgstr "Felvétel azonnali indítása..."
+msgid "Instant recording"
+msgstr "Felvétel azonnali indítása"
 
 msgid "Interface: "
 msgstr "Interfész: "
