--- a/po/id.po
+++ b/po/id.po
@@ -4725,8 +4725,8 @@ msgstr "Rekam segera"
 msgid "Instant recording location"
 msgstr "Lokasi perekaman segera"
 
-msgid "Instant recording..."
-msgstr "Perekaman segera..."
+msgid "Instant recording"
+msgstr "Perekaman segera"
 
 msgid "Interface: "
 msgstr "Antarmuka: "
