--- a/po/is.po
+++ b/po/is.po
@@ -5060,8 +5060,8 @@ msgstr "Skyndi upptöku staðsetning"
 
 #
 #, fuzzy
-msgid "Instant recording..."
-msgstr "Skyndi upptaka..."
+msgid "Instant recording"
+msgstr "Skyndi upptaka"
 
 msgid "Interface: "
 msgstr "Netkort:"
