--- a/po/it.po
+++ b/po/it.po
@@ -4601,8 +4601,8 @@ msgstr "Registrazione immediata"
 msgid "Instant recording location"
 msgstr "Percorso delle registrazioni immediate"
 
-msgid "Instant recording..."
-msgstr "Registrazione immediata..."
+msgid "Instant recording"
+msgstr "Registrazione immediata"
 
 msgid "Interface: "
 msgstr "Interfaccia: "
