--- a/po/ku.po
+++ b/po/ku.po
@@ -4633,8 +4633,8 @@ msgstr ""
 msgid "Instant recording location"
 msgstr "Instant recording location"
 
-msgid "Instant recording..."
-msgstr "Instant recording..."
+msgid "Instant recording"
+msgstr "Instant recording"
 
 msgid "Interface: "
 msgstr "Interface: "
