--- a/po/lt.po
+++ b/po/lt.po
@@ -4585,8 +4585,8 @@ msgstr "Momentinis įrašymas"
 msgid "Instant recording location"
 msgstr "Momentinio įrašymo vieta"
 
-msgid "Instant recording..."
-msgstr "Momentinis įrašymas..."
+msgid "Instant recording"
+msgstr "Momentinis įrašymas"
 
 msgid "Interface: "
 msgstr "Sąsaja: "
