--- a/po/lv.po
+++ b/po/lv.po
@@ -4590,8 +4590,8 @@ msgstr "Ieraksts"
 msgid "Instant recording location"
 msgstr "Ieraksta vieta"
 
-msgid "Instant recording..."
-msgstr "Ieraksts..."
+msgid "Instant recording"
+msgstr "Ieraksts"
 
 msgid "Interface: "
 msgstr "Interfeiss: "
