--- a/po/mk.po
+++ b/po/mk.po
@@ -4576,8 +4576,8 @@ msgstr "Инстант снимки"
 msgid "Instant recording location"
 msgstr "Локација за инстант снимки"
 
-msgid "Instant recording..."
-msgstr "Инстант снимање ..."
+msgid "Instant recording"
+msgstr "Инстант снимање"
 
 msgid "Interface: "
 msgstr "Интерфејс: "
