--- a/po/nb.po
+++ b/po/nb.po
@@ -5068,8 +5068,8 @@ msgid "Instant recording location"
 msgstr "Mappe for direkteopptak"
 
 #
-msgid "Instant recording..."
-msgstr "Direkteopptak..."
+msgid "Instant recording"
+msgstr "Direkte opptak"
 
 #
 msgid "Interface: "
