--- a/po/nl.po
+++ b/po/nl.po
@@ -4775,8 +4775,8 @@ msgstr "Directe opname"
 msgid "Instant recording location"
 msgstr "Opname-locatie directe opnames"
 
-msgid "Instant recording..."
-msgstr "Directe opname..."
+msgid "Instant recording"
+msgstr "Directe opname"
 
 msgid "Interface: "
 msgstr "Interface: "
