--- a/po/nn.po
+++ b/po/nn.po
@@ -5043,8 +5043,8 @@ msgid "Instant recording location"
 msgstr "Plassering for direkteopptak"
 
 #
-msgid "Instant recording..."
-msgstr "Direkte opptak..."
+msgid "Instant recording"
+msgstr "Direkte opptak"
 
 #
 msgid "Interface: "
