--- a/po/pl.po
+++ b/po/pl.po
@@ -4586,8 +4586,8 @@ msgstr "Natychmiastowe nagranie - menu"
 msgid "Instant recording location"
 msgstr "Lokalizacja 'natychmiastowego' nagrania"
 
-msgid "Instant recording..."
-msgstr "Natychmiastowe nagranie..."
+msgid "Instant recording"
+msgstr "Natychmiastowe nagranie"
 
 msgid "Interface: "
 msgstr "Interfejs: "
