--- a/po/pt.po
+++ b/po/pt.po
@@ -5256,8 +5256,8 @@ msgstr "Localização das gravações instantâneas"
 
 #
 #, fuzzy
-msgid "Instant recording..."
-msgstr "Gravação instantânea..."
+msgid "Instant recording"
+msgstr "Gravação instantânea"
 
 msgid "Interface: "
 msgstr "Interface: "
