--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4622,7 +4622,7 @@ msgstr ""
 msgid "Instant recording location"
 msgstr "Diretório das gravações instantâneas"
 
-msgid "Instant recording..."
+msgid "Instant recording"
 msgstr "Gravação instantânea"
 
 msgid "Interface: "
