--- a/po/ro.po
+++ b/po/ro.po
@@ -4697,7 +4697,7 @@ msgid "Instant recording location"
 msgstr "schimba inregistrare (durata)"
 
 #, fuzzy
-msgid "Instant recording..."
+msgid "Instant recording"
 msgstr "Inregistrare instant"
 
 msgid "Interface: "
