--- a/po/ru.po
+++ b/po/ru.po
@@ -4585,8 +4585,8 @@ msgstr "Меню немедленной записи"
 msgid "Instant recording location"
 msgstr "Место немедленной записи"
 
-msgid "Instant recording..."
-msgstr "Немедленные записи..."
+msgid "Instant recording"
+msgstr "Немедленные записи"
 
 msgid "Interface: "
 msgstr "Интерфейс: "
