--- a/po/sk.po
+++ b/po/sk.po
@@ -4585,8 +4585,8 @@ msgstr "Okamžité nahrávanie"
 msgid "Instant recording location"
 msgstr "Umiestnenie okamžitej nahrávky"
 
-msgid "Instant recording..."
-msgstr "Okamžité nahrávanie..."
+msgid "Instant recording"
+msgstr "Okamžité nahrávanie"
 
 msgid "Interface: "
 msgstr "Rozhranie: "
