--- a/po/sl.po
+++ b/po/sl.po
@@ -5303,7 +5303,7 @@ msgid "Instant recording location"
 msgstr "Lokacija takojšnjega snemanja"
 
 #
-msgid "Instant recording..."
+msgid "Instant recording"
 msgstr "Takojšnje snemanje"
 
 #
