--- a/po/sr.po
+++ b/po/sr.po
@@ -5304,8 +5304,8 @@ msgstr "Lokacija instant snimanja"
 
 #
 #, fuzzy
-msgid "Instant recording..."
-msgstr "Trenutno snimanje..."
+msgid "Instant recording"
+msgstr "Trenutno snimanje"
 
 #
 msgid "Interface: "
