--- a/po/sv.po
+++ b/po/sv.po
@@ -5181,8 +5181,8 @@ msgid "Instant recording location"
 msgstr "Direktinspelningens plats"
 
 #
-msgid "Instant recording..."
-msgstr "Direktinspelning..."
+msgid "Instant recording"
+msgstr "Direktinspelning"
 
 #
 msgid "Interface: "
