--- a/po/th.po
+++ b/po/th.po
@@ -4720,8 +4720,8 @@ msgid "Instant recording location"
 msgstr "เปลี่ยนแปลงการบันทึก (ช่วงเวลา)"
 
 #, fuzzy
-msgid "Instant recording..."
-msgstr "บันทึกรายการ..."
+msgid "Instant recording"
+msgstr "บันทึกรายการ"
 
 msgid "Interface: "
 msgstr ""
