--- a/po/tr.po
+++ b/po/tr.po
@@ -4656,8 +4656,8 @@ msgstr "Hızlı kayıt"
 msgid "Instant recording location"
 msgstr "Hızlı kayıt yeri"
 
-msgid "Instant recording..."
-msgstr "Hızlı kayıt..."
+msgid "Instant recording"
+msgstr "Hızlı kayıt"
 
 msgid "Interface: "
 msgstr "Arayüz: "
