--- a/po/uk.po
+++ b/po/uk.po
@@ -4584,8 +4584,8 @@ msgstr "Негайний запис"
 msgid "Instant recording location"
 msgstr "Розташування миттєвих записів"
 
-msgid "Instant recording..."
-msgstr "Негайний запис..."
+msgid "Instant recording"
+msgstr "Негайний запис"
 
 msgid "Interface: "
 msgstr "Інтерфейс: "
