--- a/po/vi.po
+++ b/po/vi.po
@@ -4555,8 +4555,8 @@ msgstr "Ghi lại ngay lập tức"
 msgid "Instant recording location"
 msgstr "Vị trí ghi âm tức thì"
 
-msgid "Instant recording..."
-msgstr "Ghi âm tức thì ..."
+msgid "Instant recording"
+msgstr "Ghi âm tức thì"
 
 msgid "Interface: "
 msgstr "Giao diện: "
