--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4566,8 +4566,8 @@ msgstr "即时录制"
 msgid "Instant recording location"
 msgstr "即时录制位置"
 
-msgid "Instant recording..."
-msgstr "即时录制..."
+msgid "Instant recording"
+msgstr "即时录制"
 
 msgid "Interface: "
 msgstr "网卡: "
