--- a/po/ca.po
+++ b/po/ca.po
@@ -5081,8 +5081,8 @@ msgid "Instant recording location"
 msgstr "Canviar la gravació (durada)"
 
 #
-msgid "Instant recording..."
-msgstr "Enregistrament instantani …"
+msgid "Instant recording"
+msgstr "Enregistrament instantani"
 
 #
 msgid "Interface: "
