--- a/po/en.po
+++ b/po/en.po
@@ -4627,8 +4627,8 @@ msgstr ""
 msgid "Instant recording location"
 msgstr "Instant recording location"
 
-msgid "Instant recording..."
-msgstr "Instant recording..."
+msgid "Instant recording"
+msgstr "Instant recording"
 
 msgid "Interface: "
 msgstr "Interface: "
