--- a/po/gl.po
+++ b/po/gl.po
@@ -5087,8 +5087,8 @@ msgid "Instant recording location"
 msgstr "Localización da gravación instantánea"
 
 #
-msgid "Instant recording..."
-msgstr "Gravación instantánea…"
+msgid "Instant recording"
+msgstr "Gravación instantánea"
 
 #
 msgid "Interface: "
