--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -4581,7 +4581,7 @@ msgstr ""
 msgid "Instant recording location"
 msgstr ""
 
-msgid "Instant recording..."
+msgid "Instant recording"
 msgstr ""
 
 msgid "Interface: "
